; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/imageio/extr_tiffdec.c_ReadTIFF.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/imageio/extr_tiffdec.c_ReadTIFF.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.WebPPicture = type { i32 }
%struct.Metadata = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [92 x i8] c"TIFF support not compiled. Please install the libtiff development package before building.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ReadTIFF(i32* %0, i64 %1, %struct.WebPPicture* %2, i32 %3, %struct.Metadata* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.WebPPicture*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.Metadata*, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store %struct.WebPPicture* %2, %struct.WebPPicture** %8, align 8
  store i32 %3, i32* %9, align 4
  store %struct.Metadata* %4, %struct.Metadata** %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load %struct.WebPPicture*, %struct.WebPPicture** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load %struct.Metadata*, %struct.Metadata** %10, align 8
  %16 = load i32, i32* @stderr, align 4
  %17 = call i32 @fprintf(i32 %16, i8* getelementptr inbounds ([92 x i8], [92 x i8]* @.str, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
